--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@microsoft/signalr": "^8.0.7",
     "@phosphor-icons/react": "^2.1.10",
     "@tailwindcss/vite": "^4.0.8",
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
+    "heroicons": "^2.2.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
