--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_API_URL=http://graduationprojecthost.runasp.net/api
+# VITE_API_URL=http://graduationprojecthost.runasp.net/api
+VITE_API_URL=https://grad1project-001-site1.qtempurl.com/api
 VITE_API_KEY=hiL56ugahSWEoYuaQT3Bg_1R-Ggz7rrxlfRxch5O9tQ
