--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-icons": "^5.5.0",
     "react-modal": "^3.16.3",
     "react-router-dom": "^7.5.0",
+    "react-select": "^5.10.1",
     "tailwindcss": "^4.0.8",
     "zustand": "^5.0.3"
   },
